--- a/MyApplication/app/src/main/res/layout/activity_main.xml
+++ b/MyApplication/app/src/main/res/layout/activity_main.xml
@@ -7,10 +7,25 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.acer.myapplication.MainActivity">
+    tools:context=".Activity.MainActivity">
 
-    <TextView
+  <Button
+      android:id="@+id/listviewbutton"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:onClick="showlistview"
+      android:text="List"
+      android:layout_centerHorizontal="true"
+      />
+
+    <Button
+        android:id="@+id/gridviewbutton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:onClick="showgridview"
+        android:text="Grid"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/listviewbutton"
+        />
+
 </RelativeLayout>
