--- a/MyApplication/app/src/main/res/layout/movie_list_row.xml
+++ b/MyApplication/app/src/main/res/layout/movie_list_row.xml
@@ -12,7 +12,7 @@
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/title"
+        android:id="@+id/firstname"
         android:textColor="@color/title"
         android:textSize="16dp"
         android:textStyle="bold"
@@ -21,13 +21,13 @@
         android:layout_height="wrap_content" />
 
     <TextView
-        android:id="@+id/genre"
-        android:layout_below="@id/title"
+        android:id="@+id/lastname"
+        android:layout_below="@id/firstname"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
     <TextView
-        android:id="@+id/year"
+        android:id="@+id/email"
         android:textColor="@color/year"
         android:layout_width="wrap_content"
         android:layout_alignParentRight="true"
