--- a/MyApplication/app/src/main/res/layout/activity_main.xml
+++ b/MyApplication/app/src/main/res/layout/activity_main.xml
@@ -28,4 +28,14 @@
         android:layout_below="@+id/listviewbutton"
         />
 
+  <Button
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="Share"
+      android:id="@+id/share"
+      android:onClick="shareitem"
+      android:layout_below="@+id/gridviewbutton"
+      android:layout_centerHorizontal="true"
+       />
+
 </RelativeLayout>
